--- a/index.html
+++ b/index.html
@@ -158,30 +158,29 @@
 
             <div class="col-sm">
               <ul id="">
+                <span class="badge badge-success">*Социальные сети - Зарубежные*</span>
+                <hr>
+                <li><img class="icon" src="img/facebook.com.ico" alt="github"><a href="https://www.facebook.com/" target="_blank">Facebook.com</a></li>
+                <li><img class="icon" src="img/instagram.com.ico" alt="github"><a href="https://www.instagram.com/" target="_blank">Instagram.com</a></li>				
+                <li><img class="icon" src="img/twitter.com.ico" alt="github"><a href="https://twitter.com/" target="_blank">Twitter.com</a></li>				
+                <li><img class="icon" src="img/blogger.com.ico" alt="github"><a href="https://www.blogger.com/" target="_blank">Blogger.com</a></li>				
+                <li><img class="icon" src="img/livejournal.com.ico" alt="github"><a href="https://www.livejournal.com/" target="_blank">Livejournal.com</a></li>				
+              </ul>			
+              <ul id="">
+                <span class="badge badge-success">*Социальные сети - Россия*</span>
+                <hr>
+                <li><img class="icon" src="img/vk.com.ico" alt="github"><a href="https://vk.com/" target="_blank">ВКонтакте</a><span class="opisi">нужен VPN</span></li>
+				<li><img class="icon" src="img/ok.ru.ico" alt="github"><a href="https://ok.ru/" target="_blank">Однокласники</a><span class="opisi">нужен VPN</span></li>
+              </ul>
+              <ul id="">
                 <span class="badge badge-success">*Социальные сети - Украина*</span>
                 <hr>
                 <li><img class="icon" src="img/ukrface.com.ua.png" alt="github"><a href="https://ukrface.com.ua/reg502400" target="_blank">Ukrface.com.ua</a></li>
+				<li><img class="icon" src="img/druzi.uk.png" alt="github"><a href="https://druzi.uk/?ref=weber515sis" target="_blank">Druzi.uk</a></li>				
 				<li><img class="icon" src="img/ukropen.net.ico" alt="github"><a href="https://ukropen.net/reg20056" target="_blank">Ukropen.net</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+				<li><img class="icon" src="img/vsitut.com.png" alt="github"><a href="https://vsitut.com/" target="_blank">Vsitut.com</a></li>
+				<li><img class="icon" src="img/vreale.net.ico" alt="github"><a href="http://vreale.net/reg33916" target="_blank">Vreale.net</a></li>
+				<li><img class="icon" src="img/odnogrupniki.com.ua.ico" alt="github"><a href="https://odnogrupniki.com.ua/reg32138" target="_blank">Odnogrupniki.com.ua</a></li>				
               </ul>
             </div>
 
@@ -215,9 +214,11 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Загрузить мессенджеры*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/telegram.ico" alt="github"><a href="https://tlgrm.ru/apps" target="_blank">Скачать TELEGRAM</a></li>
+                <li><img class="icon" src="img/viber.png" alt="github"><a href="https://www.viber.com/ru/download/" target="_blank">Скачать VIBER</a></li>				
+                <li><img class="icon" src="img/skype.ico" alt="github"><a href="https://www.skype.com/ru/get-skype/" target="_blank">Скачать SKYPE</a></li>				
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
@@ -621,9 +622,10 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Агент покупок*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">Покупки на 30% дешевле</span></li>
+                <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">Умные покупки!</span></li>				
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
@@ -989,27 +991,25 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Поисковики*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/google.ico" alt="google"><a href="https://www.google.com.ua/" target="_blank">Google</a></li>
+                <li><img class="icon" src="img/bing.com.ico" alt="yandex"><a href="https://www.bing.com/" target="_blank">Bing.com</a></li>
+                <li><img class="icon" src="img/ask.com.ico" alt="yandex"><a href="https://uk.ask.com/" target="_blank">Ask.com</a></li>
+                <li><img class="icon" src="img/yahoo.com.ico" alt="yandex"><a href="https://www.yahoo.com/" target="_blank">Yahoo.com</a></li>
+                <li><img class="icon" src="img/wolframalpha.com.ico" alt="yandex"><a href="https://www.wolframalpha.com/" target="_blank">Wolframalpha.com</a></li>				
+                <li><img class="icon" src="img/yandex.ico" alt="yandex"><a href="https://yandex.ua/" target="_blank">Yandex</a><span class="opisi">нужен VPN</span></li>	
+                <li><img class="icon" src="img/mail.ru.ico" alt="yandex"><a href="https://mail.ru/" target="_blank">Mail.ru</a><span class="opisi">нужен VPN</span></li>				
+                <li><img class="icon" src="img/rambler.ru.ico" alt="yandex"><a href="https://www.rambler.ru/" target="_blank">Rambler.ru</a></li>
+                <li><img class="icon" src="img/duckduckgo.com.ico" alt="yandex"><a href="https://duckduckgo.com/" target="_blank">Duckduckgo.com</a></li>
+                <li><img class="icon" src="img/msxml.excite.com.ico" alt="yandex"><a href="http://msxml.excite.com/" target="_blank">Excite.com</a></li>					
+                <li><img class="icon" src="img/i.ua.ico" alt="yandex"><a href="https://www.i.ua/" target="_blank">I.ua/</a></li>
+                <li><img class="icon" src="img/ukr.net.ico" alt="yandex"><a href="https://www.ukr.net/" target="_blank">Ukr.net/</a></li>				
+                <li><img class="icon" src="img/meta.ua.ico" alt="yandex"><a href="https://meta.ua/" target="_blank">Meta.ua</a></li>				
+                <li><img class="icon" src="img/shukalka.com.ua.png" alt="yandex"><a href="https://shukalka.com.ua/" target="_blank">Shukalka.com.ua</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
+                <span class="badge badge-success">*Анализаторы ИНТЕРНЕТА*</span>
                 <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
@@ -1230,6 +1230,13 @@
         <div class="col-sm footer-col">
           <div class="kolobok">
             <a href="http://sis.at.ua/forum/14" target="_blank">!Обсуждение сайта!</a>
+			
+			 <a href="http://vk.com/" class="soc-vk" target="_blank"></a>
+			 <a href="https://www.facebook.com/" class="soc-fc" target="_blank"></a>
+			 <a href="https://twitter.com/" class="soc-tw" target="_blank"></a>
+			 <a href="http://www.odnoklassniki.ru/" class="soc-od" target="_blank"></a>
+			
+			
           </div>
         </div>
 
