--- a/index.html
+++ b/index.html
@@ -83,7 +83,13 @@
               <ul id="">
                 <span class="badge badge-dark">*Социум*</span>
                 <hr>
-                <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com" target="_blank">Gmail</a></li>
+                <li><img class="icon" src="img/facebook.com.ico" alt="github"><a href="https://www.facebook.com/" target="_blank">Facebook.com</a></li>				
+                <li><img class="icon" src="img/vk.com.ico" alt="github"><a href="https://vk.com/" target="_blank">ВКонтакте</a><span class="opisi">нужен VPN</span></li>
+				<li><img class="icon" src="img/ok.ru.ico" alt="github"><a href="https://ok.ru/" target="_blank">Однокласники</a><span class="opisi">нужен VPN</span></li>	
+                <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com" target="_blank">gmail</a></li>
+                <li><img class="icon" src="img/mail.ukr.net.ico" alt="github"><a href="https://accounts.ukr.net/login" target="_blank">mail.ukr.net</a></li>
+                <li><img class="icon" src="img/webmail.meta.ua.ico" alt="github"><a href="https://webmail.meta.ua/" target="_blank">webmail.meta.ua</a></li>	
+                <li><img class="icon" src="img/e.mail.ru.ico" alt="github"><a href="https://e.mail.ru/login" target="_blank">e.mail.ru</a><span class="opisi">нужен VPN</span></li>						
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Новости*</span>
@@ -158,7 +164,7 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Социальные сети - Зарубежные*</span>
+                <span class="badge badge-success">*Социальные сети - Зарубеж*</span>
                 <hr>
                 <li><img class="icon" src="img/facebook.com.ico" alt="github"><a href="https://www.facebook.com/" target="_blank">Facebook.com</a></li>
                 <li><img class="icon" src="img/instagram.com.ico" alt="github"><a href="https://www.instagram.com/" target="_blank">Instagram.com</a></li>				
@@ -186,29 +192,30 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Электронная почта - Зарубеж*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/gmail.ico" alt="gmail"><a href="https://mail.google.com" target="_blank">gmail</a></li>
+                <li><img class="icon" src="img/outlook.live.com.ico" alt="github"><a href="https://outlook.live.com/owa/" target="_blank">outlook.live.com</a></li>				
+                <li><img class="icon" src="img/aol.com.ico" alt="github"><a href="https://login.aol.com/" target="_blank">aol.com</a></li>	
+                <li><img class="icon" src="img/yahoo.com.ico" alt="github"><a href="https://login.yahoo.com/" target="_blank">yahoo.com</a></li>					
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Электронная почта - Россия*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/mail.yandex.ua.ico" alt="github"><a href="https://mail.yandex.ua/" target="_blank">mail.yandex.ua</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/e.mail.ru.ico" alt="github"><a href="https://e.mail.ru/login" target="_blank">e.mail.ru</a><span class="opisi">нужен VPN</span></li>				
+                <li><img class="icon" src="img/mail.rambler.ru.ico" alt="github"><a href="https://mail.rambler.ru/" target="_blank">mail.rambler.ru</a></li>				
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
+                <span class="badge badge-success">*Электронная почта - Украина*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/mail.ukr.net.ico" alt="github"><a href="https://accounts.ukr.net/login" target="_blank">mail.ukr.net</a></li>
+                <li><img class="icon" src="img/mail.i.ua.ico" alt="github"><a href="http://mail.i.ua/" target="_blank">mail.i.ua</a></li>				
+                <li><img class="icon" src="img/webmail.meta.ua.ico" alt="github"><a href="https://webmail.meta.ua/" target="_blank">webmail.meta.ua</a></li>				
+                <li><img class="icon" src="img/mail.bigmir.net.ico" alt="github"><a href="https://mail.bigmir.net/" target="_blank">mail.bigmir.net</a></li>				
+                <li><img class="icon" src="img/ukrpost.ua.ico" alt="github"><a href="http://ukrpost.ua/loginAction/form.flow" target="_blank">ukrpost</a></li>				
+                <li><img class="icon" src="img/e-mail.ua.ico" alt="github"><a href="https://e-mail.ua/" target="_blank">e-mail.ua</a></li>				
+                <li><img class="icon" src="img/mail.ex.ua.ico" alt="github"><a href="https://mail.ex.ua/" target="_blank">mail.ex.ua</a></li>				
               </ul>
             </div>
 
@@ -219,26 +226,6 @@
                 <li><img class="icon" src="img/telegram.ico" alt="github"><a href="https://tlgrm.ru/apps" target="_blank">Скачать TELEGRAM</a></li>
                 <li><img class="icon" src="img/viber.png" alt="github"><a href="https://www.viber.com/ru/download/" target="_blank">Скачать VIBER</a></li>				
                 <li><img class="icon" src="img/skype.ico" alt="github"><a href="https://www.skype.com/ru/get-skype/" target="_blank">Скачать SKYPE</a></li>				
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
             </div>
 
@@ -991,6 +978,16 @@
 
             <div class="col-sm">
               <ul id="">
+                <span class="badge badge-success">*Анализатор ИНТЕРНЕТ соединения*</span>
+                <hr>
+                <li><img class="icon" src="img/speed1.ico" alt="github"><a href="http://speedtest.dc.ukrtelecom.ua/" target="_blank">speedtest.dc.ukrtelecom.ua</a></li>
+                <li><img class="icon" src="img/speed2.ico" alt="github"><a href="http://speedtest.ukrtelecom.ua/" target="_blank">speedtest.ukrtelecom.ua</a></li>				
+                <li><img class="icon" src="img/speedtest.net.ico" alt="github"><a href="https://www.speedtest.net/" target="_blank">speedtest.net</a></li>				
+                <li><img class="icon" src="img/2ip.ua.png" alt="github"><a href="https://2ip.ua/ru/" target="_blank">2ip.ua/ru</a></li>				
+                <li><img class="icon" src="img/skorostinterneta.com.ico" alt="github"><a href="https://skorostinterneta.com/proverka" target="_blank">skorostinterneta.com</a></li>				
+                <li><img class="icon" src="img/2ip.ru.ico" alt="github"><a href="https://2ip.ru/" target="_blank">2ip.ru</a></li>				
+              </ul>			
+              <ul id="">
                 <span class="badge badge-success">*Поисковики*</span>
                 <hr>
                 <li><img class="icon" src="img/google.ico" alt="google"><a href="https://www.google.com.ua/" target="_blank">Google</a></li>
@@ -1003,13 +1000,16 @@
                 <li><img class="icon" src="img/rambler.ru.ico" alt="yandex"><a href="https://www.rambler.ru/" target="_blank">Rambler.ru</a></li>
                 <li><img class="icon" src="img/duckduckgo.com.ico" alt="yandex"><a href="https://duckduckgo.com/" target="_blank">Duckduckgo.com</a></li>
                 <li><img class="icon" src="img/msxml.excite.com.ico" alt="yandex"><a href="http://msxml.excite.com/" target="_blank">Excite.com</a></li>					
-                <li><img class="icon" src="img/i.ua.ico" alt="yandex"><a href="https://www.i.ua/" target="_blank">I.ua/</a></li>
-                <li><img class="icon" src="img/ukr.net.ico" alt="yandex"><a href="https://www.ukr.net/" target="_blank">Ukr.net/</a></li>				
+                <li><img class="icon" src="img/i.ua.ico" alt="yandex"><a href="https://www.i.ua/" target="_blank">I.ua</a></li>
+                <li><img class="icon" src="img/ukr.net.ico" alt="yandex"><a href="https://www.ukr.net/" target="_blank">Ukr.net</a></li>				
                 <li><img class="icon" src="img/meta.ua.ico" alt="yandex"><a href="https://meta.ua/" target="_blank">Meta.ua</a></li>				
                 <li><img class="icon" src="img/shukalka.com.ua.png" alt="yandex"><a href="https://shukalka.com.ua/" target="_blank">Shukalka.com.ua</a></li>
               </ul>
+            </div>
+
+            <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Анализаторы ИНТЕРНЕТА*</span>
+                <span class="badge badge-success">*Разное*</span>
                 <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
@@ -1017,55 +1017,7 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-            </div>
-
-            <div class="col-sm">
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
+                <span class="badge badge-success">*Разное*</span>
                 <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
