--- a/index.html
+++ b/index.html
@@ -517,27 +517,17 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Безопасность покупок*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/bazaukraferistov.com.png" alt="github"><a href="http://bazaukraferistov.com/" target="_blank">bazaukraferistov.com</a><span class="opisi">База мошенников</span></li>
+                <li><img class="icon" src="img/ukrblacklist.com.ua.ico" alt="github"><a href="http://www.ukrblacklist.com.ua/" target="_blank">ukrblacklist.com.ua</a><span class="opisi">Черные списки</span></li>				
+                <li><img class="icon" src="img/cyberpolice.gov.ua.png" alt="github"><a href="https://cyberpolice.gov.ua/" target="_blank">cyberpolice.gov.ua</a><span class="opisi">Киберполиция</span></li>				
+                <li><img class="icon" src="img/kidala-net.in.ua.ico" alt="github"><a href="http://kidala-net.in.ua/" target="_blank">kidala-net.in.ua</a><span class="opisi">Проверить продавца</span></li>				
+                <li><img class="icon" src="img/kidalo.net.ua.ico" alt="github"><a href="https://kidalo.net.ua/" target="_blank">kidalo.net.ua</a><span class="opisi">Аферисты</span></li>				
+                <li><img class="icon" src="img/_mocheniki.ukr_.ico" alt="github"><a href="http://xn--e1agahhhaf4g.xn--j1amh/" target="_blank">мошенники.укр</a><span class="opisi">Мошенники</span></li>				
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
                 <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
@@ -545,57 +535,50 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Работа в Украине*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/work.ua.ico" alt="github"><a href="https://www.work.ua/" target="_blank">work.ua</a></li>
+                <li><img class="icon" src="img/rabota.ua.ico" alt="github"><a href="https://rabota.ua/" target="_blank">rabota.ua</a></li>				
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Доска объявлений-ВСЯКОЕ*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/olx.ua.ico" alt="github"><a href="https://www.olx.ua/" target="_blank">olx.ua</a></li>
+                <li><img class="icon" src="img/besplatka.ua.ico" alt="github"><a href="https://besplatka.ua/" target="_blank">besplatka.ua</a></li>				
+                <li><img class="icon" src="img/obyava.ua.ico" alt="github"><a href="https://obyava.ua/" target="_blank">obyava.ua</a></li>				
+                <li><img class="icon" src="img/ogolosha.ua.png" alt="github"><a href="https://ogolosha.ua/" target="_blank">ogolosha.ua</a></li>				
+                <li><img class="icon" src="img/ria.com.ico" alt="github"><a href="https://www.ria.com/" target="_blank">ria.com</a></li>				
+                <li><img class="icon" src="img/olx.ua.ico" alt="github"><a href="https://www.olx.ua/" target="_blank">olx.ua</a></li>				
+                <li><img class="icon" src="img/olx.ua.ico" alt="github"><a href="https://www.olx.ua/" target="_blank">olx.ua</a></li>				
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
+                <span class="badge badge-success">*Доска объявлений-ОДЕЖДА/ОБУВЬ*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/shafa.ua.png" alt="github"><a href="https://shafa.ua/" target="_blank">shafa.ua</a></li>
+                <li><img class="icon" src="img/kidstaff.com.ua.ico" alt="github"><a href="https://www.kidstaff.com.ua/" target="_blank">kidstaff.com.ua</a></li>				
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
+                <span class="badge badge-success">*Доска объявлений-АВТО/МОТО*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/auto.ria.com.ico" alt="github"><a href="https://auto.ria.com/" target="_blank">auto.ria.com</a></li>
+                <li><img class="icon" src="img/rst.ua.ico" alt="github"><a href="http://rst.ua/" target="_blank">rst.ua</a></li>				
               </ul>
             </div>
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
+                <span class="badge badge-success">*Торговые площадки*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/prom.ua.ico" alt="github"><a href="https://prom.ua/" target="_blank">prom.ua</a></li>
+                <li><img class="icon" src="img/bigl.ua.ico" alt="github"><a href="https://bigl.ua/" target="_blank">bigl.ua</a></li>				
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-success">*Аукционы*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/skylots.org.ico" alt="github"><a href="https://skylots.org/" target="_blank">skylots.org</a></li>
+                <li><img class="icon" src="img/auction.violity.com.ico" alt="github"><a href="https://auction.violity.com/" target="_blank">auction.violity.com</a></li>				
+                <li><img class="icon" src="img/newauction.com.ua.ico" alt="github"><a href="https://newauction.com.ua/" target="_blank">newauction.com.ua</a></li>				
+                <li><img class="icon" src="img/livemaster.ru.ico" alt="github"><a href="https://www.livemaster.ru/" target="_blank">livemaster.ru</a></li>				
               </ul>
             </div>
 
