--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Загрузить мессенджеры*</span>
+                <span class="badge badge-warning">*Загрузить мессенджеры*</span>
                 <hr>
                 <li><img class="icon" src="img/telegram.ico" alt="github"><a href="https://tlgrm.ru/apps" target="_blank">Скачать TELEGRAM</a></li>
                 <li><img class="icon" src="img/viber.png" alt="github"><a href="https://www.viber.com/ru/download/" target="_blank">Скачать VIBER</a></li>				
@@ -237,7 +237,7 @@
         <div class="tab-pane fade" id="news" role="tabpanel" aria-labelledby="news-tab">
           <div class="row">
 
-            <div class="col-sm">
+<!--             <div class="col-sm">
               <ul id="">
                 <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
                 <hr>
@@ -319,7 +319,7 @@
                 <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
-            </div>
+            </div> -->
 
           </div>
         </div>
@@ -330,7 +330,7 @@
         <div class="tab-pane fade" id="media" role="tabpanel" aria-labelledby="media-tab">
           <div class="row">
 
-            <div class="col-sm">
+<!--             <div class="col-sm">
               <ul id="">
                 <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
                 <hr>
@@ -412,7 +412,7 @@
                 <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
-            </div>
+            </div> -->
 
           </div>
         </div>
@@ -422,7 +422,7 @@
         <div class="tab-pane fade" id="games" role="tabpanel" aria-labelledby="games-tab">
           <div class="row">
 
-            <div class="col-sm">
+<!--             <div class="col-sm">
               <ul id="">
                 <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
                 <hr>
@@ -504,7 +504,7 @@
                 <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
-            </div>
+            </div> -->
 
           </div>
         </div>
@@ -517,29 +517,26 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Безопасность покупок*</span>
+                <span class="badge badge-warning">*Отследить посылку (по почте)*</span>
+                <hr>
+                <li><img class="icon" src="img/novaposhta.ua.ico" alt="github"><a href="https://novaposhta.ua/ru/tracking" target="_blank">novaposhta.ua</a></li>
+                <li><img class="icon" src="img/intime.ua.ico" alt="github"><a href="https://intime.ua/" target="_blank">intime.ua</a></li>
+                <li><img class="icon" src="img/ukrposhta.ua.ico" alt="github"><a href="http://ukrposhta.ua/vidslidkuvati-forma-poshuku" target="_blank">ukrposhta</a></li>
+                <li><img class="icon" src="img/meest-express.com.ua.ico" alt="github"><a href="https://www.meest-express.com.ua/ua/" target="_blank">meest-express.com.ua</a></li>
+              </ul>			
+              <ul id="">
+                <span class="badge badge-warning">*Безопасность покупок*</span>
                 <hr>
                 <li><img class="icon" src="img/bazaukraferistov.com.png" alt="github"><a href="http://bazaukraferistov.com/" target="_blank">bazaukraferistov.com</a><span class="opisi">База мошенников</span></li>
                 <li><img class="icon" src="img/ukrblacklist.com.ua.ico" alt="github"><a href="http://www.ukrblacklist.com.ua/" target="_blank">ukrblacklist.com.ua</a><span class="opisi">Черные списки</span></li>				
                 <li><img class="icon" src="img/cyberpolice.gov.ua.png" alt="github"><a href="https://cyberpolice.gov.ua/" target="_blank">cyberpolice.gov.ua</a><span class="opisi">Киберполиция</span></li>				
                 <li><img class="icon" src="img/kidala-net.in.ua.ico" alt="github"><a href="http://kidala-net.in.ua/" target="_blank">kidala-net.in.ua</a><span class="opisi">Проверить продавца</span></li>				
                 <li><img class="icon" src="img/kidalo.net.ua.ico" alt="github"><a href="https://kidalo.net.ua/" target="_blank">kidalo.net.ua</a><span class="opisi">Аферисты</span></li>				
-                <li><img class="icon" src="img/_mocheniki.ukr_.ico" alt="github"><a href="http://xn--e1agahhhaf4g.xn--j1amh/" target="_blank">мошенники.укр</a><span class="opisi">Мошенники</span></li>				
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/mocheniki.ukr.ico" alt="github"><a href="http://xn--e1agahhhaf4g.xn--j1amh/" target="_blank">мошенники.укр</a><span class="opisi">Мошенники</span></li>				
               </ul>
             </div>
 
             <div class="col-sm">
-              <ul id="">
-                <span class="badge badge-success">*Работа в Украине*</span>
-                <hr>
-                <li><img class="icon" src="img/work.ua.ico" alt="github"><a href="https://www.work.ua/" target="_blank">work.ua</a></li>
-                <li><img class="icon" src="img/rabota.ua.ico" alt="github"><a href="https://rabota.ua/" target="_blank">rabota.ua</a></li>				
-              </ul>
               <ul id="">
                 <span class="badge badge-success">*Доска объявлений-ВСЯКОЕ*</span>
                 <hr>
@@ -548,8 +545,6 @@
                 <li><img class="icon" src="img/obyava.ua.ico" alt="github"><a href="https://obyava.ua/" target="_blank">obyava.ua</a></li>				
                 <li><img class="icon" src="img/ogolosha.ua.png" alt="github"><a href="https://ogolosha.ua/" target="_blank">ogolosha.ua</a></li>				
                 <li><img class="icon" src="img/ria.com.ico" alt="github"><a href="https://www.ria.com/" target="_blank">ria.com</a></li>				
-                <li><img class="icon" src="img/olx.ua.ico" alt="github"><a href="https://www.olx.ua/" target="_blank">olx.ua</a></li>				
-                <li><img class="icon" src="img/olx.ua.ico" alt="github"><a href="https://www.olx.ua/" target="_blank">olx.ua</a></li>				
               </ul>
               <ul id="">
                 <span class="badge badge-success">*Доска объявлений-ОДЕЖДА/ОБУВЬ*</span>
@@ -567,6 +562,12 @@
 
             <div class="col-sm">
               <ul id="">
+                <span class="badge badge-success">*Работа в Украине*</span>
+                <hr>
+                <li><img class="icon" src="img/work.ua.ico" alt="github"><a href="https://www.work.ua/" target="_blank">work.ua</a></li>
+                <li><img class="icon" src="img/rabota.ua.ico" alt="github"><a href="https://rabota.ua/" target="_blank">rabota.ua</a></li>				
+              </ul> 
+             <ul id="">
                 <span class="badge badge-success">*Торговые площадки*</span>
                 <hr>
                 <li><img class="icon" src="img/prom.ua.ico" alt="github"><a href="https://prom.ua/" target="_blank">prom.ua</a></li>
@@ -592,29 +593,19 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-success">*Агент покупок*</span>
+                <span class="badge badge-warning">*Выгодные ПОКУПКИ - возврат % с магазинов*</span>
                 <hr>
                 <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">Покупки на 30% дешевле</span></li>
                 <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">Умные покупки!</span></li>				
               </ul>
               <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
+                <span class="badge badge-warning">*АГЕНТ покупок (анализатор+отзывник)*</span>
                 <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЖЕЛТАЯ*</span>
-                <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-ЗЕЛЕНАЯ*</span>
-                <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-КРАСНАЯ*</span>
-                <hr>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
             </div>
@@ -775,7 +766,7 @@
         <div class="tab-pane fade" id="bank" role="tabpanel" aria-labelledby="bank-tab">
           <div class="row">
 
-            <div class="col-sm">
+<!--             <div class="col-sm">
               <ul id="">
                 <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
                 <hr>
@@ -857,7 +848,7 @@
                 <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
-            </div>
+            </div> -->
 
           </div>
         </div>
@@ -867,7 +858,7 @@
         <div class="tab-pane fade" id="komynal" role="tabpanel" aria-labelledby="komynal-tab">
           <div class="row">
 
-            <div class="col-sm">
+<!--             <div class="col-sm">
               <ul id="">
                 <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
                 <hr>
@@ -949,7 +940,7 @@
                 <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
-            </div>
+            </div> -->
 
           </div>
         </div>
@@ -1062,7 +1053,7 @@
         <div class="tab-pane fade" id="rek" role="tabpanel" aria-labelledby="rek-tab">
           <div class="row">
 
-            <div class="col-sm">
+<!--             <div class="col-sm">
               <ul id="">
                 <span class="badge badge-primary">*Підгрупа-СИНЯЯ*</span>
                 <hr>
@@ -1144,7 +1135,7 @@
                 <hr>
                 <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
               </ul>
-            </div>
+            </div> -->
 
           </div>
         </div>
