--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
-  <title>ZAKLADKI - Список популярных сайтов</title>
+  <title>ZAKLADKI - Список популярных сайтов (ТОП ЗАКЛАДКИ)</title>
 </head>
 
 <body>
@@ -118,7 +118,8 @@
 			  <ul id="">
                 <span class="badge badge-dark">*Магазины*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">Покупки на 30% дешевле</span></li>
+                <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">Умные покупки!</span></li>				
               </ul>
               <ul id="">
                 <span class="badge badge-dark">*Банкинг*</span>
@@ -136,15 +137,15 @@
               <ul id="">
                 <span class="badge badge-dark">*Другое*</span>
                 <hr>
-                <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Sinoptik</a></li>
-                <li><img class="icon" src="img/rp5.ua.ico" alt="rp5.ua"><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Rp5.ua</a></li>
-                <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Meteoprog</a></li>
-                <li><img class="icon" src="img/weather.com.ico" alt="weather.com"><a href="https://weather.com/uk-UA/weather/hourbyhour/l/UPXX0695:1:UP" target="_blank">Weather.com</a></li>
-                <li><img class="icon" src="img/gismeteo.ico" alt="gismeteo"><a href="https://www.gismeteo.ua/weather-novomyrhorod-12104/gm/" target="_blank">Gismeteo</a></li>
+                <li><img class="icon" src="img/speed2.ico" alt="github"><a href="http://speedtest.ukrtelecom.ua/" target="_blank">speedtest.ukrtelecom.ua</a></li>	
               </ul>
 			  <ul id="">
                 <span class="badge badge-dark">*Городок*</span>
                 <hr>
+                <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Sinoptik</a></li>
+                <li><img class="icon" src="img/rp5.ua.ico" alt="rp5.ua"><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Rp5.ua</a></li>
+                <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Meteoprog</a></li>
+                <li><img class="icon" src="img/gismeteo.ico" alt="gismeteo"><a href="https://www.gismeteo.ua/weather-novomyrhorod-12104/gm/" target="_blank">Gismeteo</a></li>
                 <li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_news" target="_blank">Novomyrhorod News</a><span class="opisi">нужен VPN</span></li>
                 <li><img class="icon" src="img/novomirgorod.com.png" alt="novomirgorod"><a href="http://novomirgorod.com" target="_blank">Новомиргород. Новини та події</a></li>
               </ul>
@@ -596,26 +597,25 @@
                 <span class="badge badge-warning">*Выгодные ПОКУПКИ - возврат % с магазинов*</span>
                 <hr>
                 <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">Покупки на 30% дешевле</span></li>
-                <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">Умные покупки!</span></li>				
+                <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">Умные покупки!</span></li>
               </ul>
               <ul id="">
-                <span class="badge badge-warning">*АГЕНТ покупок (анализатор+отзывник)*</span>
+                <span class="badge badge-warning">*АГЕНТ-анализатор покупок*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
+                <li><img class="icon" src="img/hotline.ua.ico" alt="github"><a href="https://hotline.ua/" target="_blank">hotline.ua</a></li>
+                <li><img class="icon" src="img/ek.ua.ico" alt="github"><a href="http://ek.ua/" target="_blank">ek.ua</a></li>
+                <li><img class="icon" src="img/price.ua.ico" alt="github"><a href="https://price.ua/" target="_blank">price.ua</a></li>
+              </ul>
+              <ul id="">
+                <span class="badge badge-warning">*АГЕНТ-отзывник покупок**</span>
+                <hr>
+                <li><img class="icon" src="img/otzyvua.net.ico" alt="github"><a href="https://www.otzyvua.net/" target="_blank">otzyvua.net</a></li>
+                <li><img class="icon" src="img/otzovik.com.ico" alt="github"><a href="https://otzovik.com/" target="_blank">otzovik.com</a></li>
+                <li><img class="icon" src="img/irecommend.png" alt="github"><a href="https://irecommend.ru/" target="_blank">irecommend.ru</a></li>
               </ul>
             </div>
 
             <div class="col-sm">
-              <ul id="">
-                <span class="badge badge-success">*Підгрупа-СИНЯЯ*</span>
-                <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a></li>
-              </ul>
               <ul id="">
                 <span class="badge badge-success">*Підгрупа-ЧЕРНАЯ*</span>
                 <hr>
@@ -1010,8 +1010,11 @@
               <ul id="">
                 <span class="badge badge-danger">*Новомиргород*</span>
                 <hr>
-                <li><img class="icon" src="img/github.ico" alt="github"><a href="https://github.com/" target="_blank">Github</a><span class="opisi">погода для вашего города</span></li>
-                <li><img class="icon" src="img/rozetka.ico" alt="rezetka"><a href="https://rozetka.com.ua/ua/" target="_blank">Розетка</a></li>
+                <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Sinoptik</a></li>
+                <li><img class="icon" src="img/rp5.ua.ico" alt="rp5.ua"><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Rp5.ua</a></li>
+                <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Meteoprog</a></li>
+                <li><img class="icon" src="img/weather.com.ico" alt="weather.com"><a href="https://weather.com/uk-UA/weather/hourbyhour/l/UPXX0695:1:UP" target="_blank">Weather.com</a></li>
+                <li><img class="icon" src="img/gismeteo.ico" alt="gismeteo"><a href="https://www.gismeteo.ua/weather-novomyrhorod-12104/gm/" target="_blank">Gismeteo</a></li>
               </ul>
             </div>
 
