--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 
             <div class="col-sm">
               <ul id="">
-                <span class="badge badge-warning">*Возврат % с магазинов*</span>
+                <span class="badge badge-warning">*Возврат % с покупок*</span>
                 <hr>
                 <li><img class="icon" src="img/letyshops.com.ico" alt="github"><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops.com</a><span class="opisi">30%дешевле</span></li>
                 <li><img class="icon" src="img/smarty.sale.ico" alt="github"><a href="https://smarty.sale/1197327" target="_blank">Smarty.sale</a><span class="opisi">умные покупки</span></li>
