--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="bank-tab" data-toggle="pill" href="#bank" role="tab" aria-controls="bank" aria-selected="false">Банкинг</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="komynal-tab" data-toggle="pill" href="#komynal" role="tab" aria-controls="komynal" aria-selected="false">Комуналка</a></li>
             <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="drygoe-tab" data-toggle="pill" href="#drygoe" role="tab" aria-controls="drygoe" aria-selected="false">Другое</a></li>
-            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="gorodok-tab" data-toggle="pill" href="#gorodok" role="tab" aria-controls="gorodok" aria-selected="false">"Городок"</a></li>
-            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false">"Реклама"</a></li>
+            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="gorodok-tab" data-toggle="pill" href="#gorodok" role="tab" aria-controls="gorodok" aria-selected="false">Городок</a></li>
+            <li class="nav-item"><a class="nav-link" onclick="topFunction()" id="rek-tab" data-toggle="pill" href="#rek" role="tab" aria-controls="rek" aria-selected="false">Реклама</a></li>
           </ul>
 
         </div>
@@ -140,13 +140,13 @@
                 <li><img class="icon" src="img/speed2.ico" alt="github"><a href="http://speedtest.ukrtelecom.ua/" target="_blank">speedtest.ukrtelecom.ua</a></li>
               </ul>
               <ul id="">
-                <span class="badge badge-dark">*Городок*</span>
+                <span class="badge badge-dark">*Городок-Новомиргород*</span>
                 <hr>
                 <li><img class="icon" src="img/sinoptik.ico" alt="sinoptik"><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Sinoptik</a></li>
                 <li><img class="icon" src="img/rp5.ua.ico" alt="rp5.ua"><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Rp5.ua</a></li>
                 <li><img class="icon" src="img/meteoprog.ico" alt="meteoprog"><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Meteoprog</a></li>
                 <li><img class="icon" src="img/gismeteo.ico" alt="gismeteo"><a href="https://www.gismeteo.ua/weather-novomyrhorod-12104/gm/" target="_blank">Gismeteo</a></li>
-                <li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_news" target="_blank">Novomyrhorod News</a><span class="opisi">нужен VPN</span></li>
+                <li><img class="icon" src="img/vk.ico" alt="vk"><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА</a><span class="opisi">нужен VPN</span></li>
                 <li><img class="icon" src="img/novomirgorod.com.png" alt="novomirgorod"><a href="http://novomirgorod.com" target="_blank">Новомиргород. Новини та події</a></li>
               </ul>
               <ul id="">
